@@ -1,4 +1,7 @@
 
+  * Fixed bug in playlist not allowing to delete more than one track if the
+    first track is selected
+  * Added LeoLyrics lyric search http://leoslyrics.com/
   * Fixed bug in radio stations list box ordering
 
 2009-08-04 0.1.5
